Fix connector item alignment

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11058,6 +11058,7 @@ a.hideLink {
   height: 90px;
   display: inline-block;
   cursor: pointer;
+  vertical-align: top;
 }
 
 .cursor-pointer {
