--- a/resources/sass/paperback.scss
+++ b/resources/sass/paperback.scss
@@ -131,6 +131,7 @@ a.hideLink {
     height: 90px;
     display: inline-block;
     cursor: pointer;
+    vertical-align: top;
 }
 
 .cursor-pointer {
